k8s/gateway/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: myteststore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: myteststore/gateway:3.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
