k8s/gateway/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: myteststore
spec:
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
