k8s/gateway/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: myteststore
spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: gateway
                port:
                  number: 8080
